--- a/Practice/Day 8 - DOM Events/todos/style.css
+++ b/Practice/Day 8 - DOM Events/todos/style.css
@@ -97,7 +97,7 @@ b {
   font-weight: 400; }
 
 i {
-  font-size: 3rem; }
+  font-size: 1rem; }
 
 /*=======================================*/
 /* General CSS  */
@@ -161,8 +161,10 @@ body {
   width: 50%;
   margin: 0 auto;
   box-shadow: 0px 0px 13px #c7c6c6; }
+  .content .fa-chevron-circle-down {
+    font-size: 13px; }
   .content .mainInput {
-    width: 100%;
+    width: 90%;
     height: 50px;
     margin: 0;
     border-radius: 0%; }
