chrome extension complete

--- a/Practice/Day 11 - Chrome Extension/Project/chrome_extension/css/normalize.css
+++ b/Practice/Day 11 - Chrome Extension/Project/chrome_extension/css/normalize.css
@@ -146,90 +146,5 @@ body {
 /*=======================================*/
 /*  Main Css */
 /*=======================================*/
-.container {
-  box-shadow: 0px 0px 13px #c7c6c6;
-  width: 50%;
-  display: flex;
-  flex-wrap: wrap; }
 
-.search-parent {
-  background: #7c7daa;
-  width: 100%; }
-  .search-parent input {
-    width: 50%;
-    height: 30px;
-    border-radius: 5px;
-    border: none;
-    padding: 5px;
-    margin: 15px; }
-  .search-parent h1 {
-    font-size: 3rem;
-    margin: 15px;
-    color: white;
-    font-weight: 600; }
-  .search-parent p {
-    font-size: 1.2rem;
-    margin: 15px;
-    color: #e0e0e0; }
-
-.content-parent {
-  background: white;
-  width: 100%; }
-  .content-parent h2 {
-    font-size: 2rem;
-    margin: 15px;
-    color: #7c7daa;
-    font-weight: bold; }
-  .content-parent li {
-    display: flex;
-    justify-content: space-between;
-    padding: 15px;
-    transition-duration: 0.8s; }
-    .content-parent li span {
-      margin-left: 5rem;
-      line-height: 45px;
-      color: #7c7daa;
-      font-size: 1.2rem; }
-    .content-parent li .deleteBtn {
-      margin-right: 5rem;
-      margin-bottom: 0px;
-      border-radius: 5px;
-      padding: .6rem 2rem;
-      font-weight: 600;
-      border: 1px solid #C3735C;
-      background: #7c7daa;
-      color: white;
-      transition-duration: 0.4s; }
-    .content-parent li .deleteBtn:hover {
-      background: #555579; }
-  .content-parent li:hover {
-    background: #7c7daa33; }
-    .content-parent li:hover span {
-      color: white; }
-  .content-parent .hideBookSection {
-    padding: 10px;
-    background: #7c7daa; }
-    .content-parent .hideBookSection label {
-      color: white; }
-  .content-parent .addBookSection {
-    padding: 15px;
-    background: #7c7daa; }
-    .content-parent .addBookSection button {
-      margin-bottom: 0px;
-      border-radius: 5px;
-      padding: .45rem 2rem;
-      font-weight: 600;
-      border: 1px solid #aaaaaa;
-      background: #7c7daa;
-      color: white;
-      transition-duration: 0.4s; }
-    .content-parent .addBookSection button:hover {
-      background: #555579; }
-    .content-parent .addBookSection input {
-      width: 45%;
-      height: 30px;
-      border-radius: 5px;
-      border: none;
-      padding: 5px; }
-
-/*# sourceMappingURL=style.css.map */
+/*# sourceMappingURL=normalize.css.map */
