--- a/Practice/Day 8 - DOM Events/todos/base.scss
+++ b/Practice/Day 8 - DOM Events/todos/base.scss
@@ -187,6 +187,7 @@ body {
 	width: 50%;
 	margin: 0 auto;
 	box-shadow: 0px 0px 13px #c7c6c6;
+	background: white;
 
 	.fa-chevron-circle-down {
 		font-size: 13px;
@@ -195,17 +196,27 @@ body {
 	
 	
 	.mainInput {
-		width: 90%;
+		width: 84%;
 		height: 50px;
 		margin: 0;
 		border-radius: 0%;
+		border: none;
+		
 		
 	}
 	::placeholder {
 		color: rgb(206, 206, 206);
 		opacity: 1; /* Firefox */
-		font-size: 18px;
+		font-size: 15px;
+		padding: 5px;
+		border: none;
+		background: white;
 	  }
+
+	  .mainInput:focus {
+		outline: 0; 
+		border: 0;
+	}
 	input[type=text]:focus {
 		border: 1px solid rgb(226, 226, 226);
 	  }
