--- a/Practice/Day 8 - DOM Events/todos/style.css
+++ b/Practice/Day 8 - DOM Events/todos/style.css
@@ -160,19 +160,26 @@ body {
 .content {
   width: 50%;
   margin: 0 auto;
-  box-shadow: 0px 0px 13px #c7c6c6; }
+  box-shadow: 0px 0px 13px #c7c6c6;
+  background: white; }
   .content .fa-chevron-circle-down {
     font-size: 13px; }
   .content .mainInput {
-    width: 90%;
+    width: 84%;
     height: 50px;
     margin: 0;
-    border-radius: 0%; }
+    border-radius: 0%;
+    border: none; }
   .content ::placeholder {
     color: #cecece;
     opacity: 1;
     /* Firefox */
-    font-size: 18px; }
+    font-size: 15px;
+    padding: 5px;
+    border: none;
+    background: white; }
+  .content .mainInput:focus {
+    outline: 0; }
   .content input[type=text]:focus {
     border: 1px solid #e2e2e2; }
   .content li {
