--- a/git username search tool/css/main.css
+++ b/git username search tool/css/main.css
@@ -16,6 +16,8 @@ body .container {
     padding: 5px;
     margin: 15px;
     background: rgba(95, 93, 93, 0.205); }
+  body .container input:focus {
+    color: grey; }
   body .container .detailsSection {
     box-shadow: 0px 0px 13px #c7c6c6;
     width: 60%;
