--- a/git username search tool/css/main.scss
+++ b/git username search tool/css/main.scss
@@ -20,6 +20,9 @@ body {
             margin: 15px;
             background: rgba(95, 93, 93, 0.205);
         }
+        input:focus {
+            color: grey;
+        }
 
         .detailsSection {
             box-shadow: 0px 0px 13px #c7c6c6;
